force-app/main/default/objects/CR_Automation__c/CR_Automation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CR Automation</label>
</CustomObject>