force-app/main/default/objects/CR_Automation__c/fields/Auto_Close_Queue__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Queue__c</fullName>
    <label>Auto Close Queue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>