force-app/main/default/objects/CR_Automation__c/fields/Case_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_Id__c</fullName>
    <label>Case Record Type Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>