force-app/main/default/objects/CR_Automation__c/fields/Case_Subject_Append_Words__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject_Append_Words__c</fullName>
    <label>Case Subject Append Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>