force-app/main/default/objects/CR_Automation__c/fields/Initial_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Initial_Queue_Id__c</fullName>
    <label>Initial Queue Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>